WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283240
ASSERTION FAILED: record.body.isNull() in Storage::ReadOperation::finishReadRecord
https://bugs.webkit.org/show_bug.cgi?id=283240
Summary
ASSERTION FAILED: record.body.isNull() in Storage::ReadOperation::finishReadR...
Sihui Liu
Reported
2024-11-16 15:50:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2024-11-16 15:51:08 PST
rdar://140028885
Sihui Liu
Comment 2
2024-11-16 16:03:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36748
Sihui Liu
Comment 3
2024-11-16 16:44:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36759
EWS
Comment 4
2024-11-18 09:22:09 PST
Committed
286732@main
(8148d4ee0c09): <
https://commits.webkit.org/286732@main
> Reviewed commits have been landed. Closing PR #36759 and removing active labels.
Fujii Hironori
Comment 5
2024-11-18 12:02:31 PST
***
Bug 283229
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug