ASSERTION FAILED: record.body.isNull() in Storage::ReadOperation::finishReadRecord https://bugs.webkit.org/show_bug.cgi?id=283240 rdar://140028885

Reviewed by Ben Nham.

It is possible that record body is actually not stored in blob storage, and ReadOperation::finishReadBlob will get a
null blob. In this case, we should not update Storage::ReadOperation::m_record, and should still try reading body from
record storage. Also this patch ensures an empty record is returned when we fail to read body after reading both blob
storage and record storage. This restores the old behavior before 286646@main.

* Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::Storage::ReadOperation::finish):
(WebKit::NetworkCache::Storage::ReadOperation::finishReadRecord):
(WebKit::NetworkCache::Storage::ReadOperation::finishReadBlob):

Canonical link: https://commits.webkit.org/286732@main